--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
+    "generate": "prisma generate",
+    "push": "prisma db push",
     "lint": "next lint",
     "start": "next start"
   },
