--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "prisma generate",
     "generate": "prisma generate",
     "push": "prisma db push",
+    "studio": "prisma studio",
     "lint": "next lint",
     "start": "next start"
   },
