--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
