--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "classnames": "^2.3.2",
     "daisyui": "^2.51.3",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
@@ -29,6 +30,7 @@
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "superjson": "1.9.1",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
