--- a/package.json
+++ b/package.json
@@ -23,20 +23,23 @@
         "@trpc/server": "^10.9.0",
         "classnames": "^2.3.2",
         "daisyui": "^2.51.3",
+        "jsonwebtoken": "^9.0.0",
         "next": "13.1.6",
         "nodemailer": "^6.9.1",
+        "nookies": "^2.5.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.8.0",
         "react-modal": "^3.16.1",
         "superjson": "1.9.1",
-        "usehooks-ts": "^2.9.1",
         "try-catch": "^3.0.1",
         "try-to-catch": "^3.0.1",
+        "usehooks-ts": "^2.9.1",
         "zod": "^3.20.2"
     },
     "devDependencies": {
         "@types/eslint": "^8.21.1",
+        "@types/jsonwebtoken": "^9.0.1",
         "@types/node": "^18.11.18",
         "@types/nodemailer": "^6.4.7",
         "@types/prettier": "^2.7.2",
