--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@prisma/client": "^4.9.0",
+        "@splidejs/react-splide": "^0.7.12",
         "@tailwindui/react": "^0.1.1",
         "@tanstack/react-query": "^4.20.2",
         "@trpc/client": "^10.9.0",
@@ -30,9 +31,9 @@
         "react-icons": "^4.8.0",
         "react-modal": "^3.16.1",
         "superjson": "1.9.1",
-        "usehooks-ts": "^2.9.1",
         "try-catch": "^3.0.1",
         "try-to-catch": "^3.0.1",
+        "usehooks-ts": "^2.9.1",
         "zod": "^3.20.2"
     },
     "devDependencies": {
