--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "start": "next start",
         "reset": "prisma db push --accept-data-loss --schema=./prisma/reset.prisma; prisma db push --accept-data-loss"
     },
+    "prisma": {
+      "seed": "node prisma/seed.mjs"
+    },
     "dependencies": {
         "@prisma/client": "^4.9.0",
         "@splidejs/react-splide": "^0.7.12",
