fix: changeing page error

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "reset": "prisma db push --accept-data-loss --schema=./prisma/reset.prisma; prisma db push --accept-data-loss"
     },
     "prisma": {
-      "seed": "node prisma/seed.mjs"
+        "seed": "node prisma/seed.mjs"
     },
     "dependencies": {
         "@prisma/client": "^4.9.0",
@@ -33,6 +33,7 @@
         "nookies": "^2.5.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "^7.43.9",
         "react-icons": "^4.8.0",
         "react-modal": "^3.16.1",
         "superjson": "1.9.1",
