--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@trpc/server": "^10.9.0",
         "classnames": "^2.3.2",
         "daisyui": "^2.51.3",
+        "date-fns": "^2.29.3",
         "jsonwebtoken": "^9.0.0",
         "next": "13.1.6",
         "nodemailer": "^6.9.1",
