--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "classnames": "^2.3.2",
         "daisyui": "^2.51.3",
         "date-fns": "^2.29.3",
+        "jotai": "^2.0.3",
         "jsonwebtoken": "^9.0.0",
         "next": "13.1.6",
         "nodemailer": "^6.9.1",
@@ -41,7 +42,8 @@
         "superjson": "1.9.1",
         "usehooks-ts": "^2.9.1",
         "validator": "^13.9.0",
-        "zod": "^3.20.2"
+        "zod": "^3.20.2",
+        "zod-prisma-types": "^2.5.3"
     },
     "devDependencies": {
         "@types/eslint": "^8.21.1",
