--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.9",
+        "react-hot-toast": "^2.4.0",
         "react-icons": "^4.8.0",
         "react-modal": "^3.16.1",
         "superjson": "1.9.1",
