--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "superjson": "1.9.1",
         "usehooks-ts": "^2.9.1",
         "validator": "^13.9.0",
+        "winston": "^3.8.2",
         "zod": "^3.20.2",
         "zod-prisma-types": "^2.5.3"
     },
