--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
         "@trpc/next": "^10.9.0",
         "@trpc/react-query": "^10.9.0",
         "@trpc/server": "^10.9.0",
+        "aws-cdk-lib": "^2.74.0",
+        "aws-sdk": "^2.1359.0",
         "classnames": "^2.3.2",
+        "constructs": "^10.1.312",
         "daisyui": "^2.51.3",
         "jsonwebtoken": "^9.0.0",
         "next": "13.1.6",
