--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
         "@trpc/next": "^10.9.0",
         "@trpc/react-query": "^10.9.0",
         "@trpc/server": "^10.9.0",
+        "aws-cdk-lib": "^2.74.0",
+        "aws-sdk": "^2.1359.0",
         "classnames": "^2.3.2",
+        "constructs": "^10.1.312",
         "daisyui": "^2.51.3",
+        "date-fns": "^2.29.3",
+        "jotai": "^2.0.3",
         "jsonwebtoken": "^9.0.0",
         "next": "13.1.6",
         "nodemailer": "^6.9.1",
@@ -35,12 +40,15 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.9",
+        "react-hot-toast": "^2.4.0",
         "react-icons": "^4.8.0",
         "react-modal": "^3.16.1",
         "superjson": "1.9.1",
         "usehooks-ts": "^2.9.1",
         "validator": "^13.9.0",
-        "zod": "^3.20.2"
+        "winston": "^3.8.2",
+        "zod": "^3.20.2",
+        "zod-prisma-types": "^2.5.3"
     },
     "devDependencies": {
         "@types/eslint": "^8.21.1",
