--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@trpc/server": "^10.9.0",
         "aws-cdk-lib": "^2.74.0",
         "aws-sdk": "^2.1359.0",
+        "chart.js": "^4.3.0",
         "classnames": "^2.3.2",
         "constructs": "^10.1.312",
         "daisyui": "^2.51.3",
@@ -37,6 +38,7 @@
         "next": "13.1.6",
         "nodemailer": "^6.9.1",
         "nookies": "^2.5.2",
+        "prisma": "4.10.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.9",
@@ -67,7 +69,6 @@
         "postcss": "^8.4.14",
         "prettier": "^2.8.1",
         "prettier-plugin-tailwindcss": "^0.2.1",
-        "prisma": "^4.9.0",
         "tailwindcss": "^3.2.0",
         "typescript": "^4.9.4"
     },
