--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
         "react-hook-form": "^7.43.9",
         "react-hot-toast": "^2.4.0",
         "react-icons": "^4.8.0",
+        "react-mde": "^11.5.0",
         "react-modal": "^3.16.1",
+        "react-showdown": "^2.3.1",
+        "showdown": "^2.1.0",
         "superjson": "1.9.1",
         "usehooks-ts": "^2.9.1",
         "validator": "^13.9.0",
@@ -58,6 +61,7 @@
         "@types/prettier": "^2.7.2",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.10",
+        "@types/showdown": "^2.0.1",
         "@types/validator": "^13.7.14",
         "@typescript-eslint/eslint-plugin": "^5.47.1",
         "@typescript-eslint/parser": "^5.47.1",
